# enclave-cc

./: .gitignore  CODEOWNERS  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: basic.yaml  ci_test.yaml  e2e.yaml  generate_payload.yml  hlc_test.yml  links.yml  payload.yaml  release.yaml  runtimeclass_ci.sh  test_ci_cases.yaml  utils.sh
ci/: ci_tests.sh  runtimeclass_ci.sh  utils.sh
ci/case_configs/: ccruntime_for_ci.yaml  eaa_cosign_encrypted_hello_world.yaml
docs/: ci-setup.md  design.md  develop-env-install.md  develop-guideline.md  shim-rune.md
docs/images/: ecc_components_workflow.pptx
src/: Makefile
src/enclave-agent/: Cargo.toml  Makefile
src/enclave-agent/src/: config.rs  main.rs
src/enclave-agent/src/services/: images.rs  mod.rs
src/enclave-agent/test_data/decrypt_config/: decrypt_config_default_validate.conf  decrypt_config_disable_validate.conf  decrypt_config_format_invalid.conf  decrypt_config_normal.conf
src/libs/: Cargo.toml
src/libs/protocols/: Cargo.toml  build.rs
src/libs/protocols/protos/: image.proto
src/libs/protocols/src/: lib.rs
src/rune/: README.md  attest.go  go.mod  go.sum  init.go  spec.go  utils_linux.go
src/rune/libenclave/: agent.go  check.go  console_linux.go  container_linux.go  factory_linux.go  init.go  init_linux.go  network_linux.go  notify_linux.go  notify_linux_v2.go  process.go  process_linux.go  restored_process.go  rootfs_linux.go  runelet.go  setns_init_linux.go  standard_init_linux.go  state_linux.go  sync.go  utils.go
src/rune/libenclave/attestation/: attester.go  challenger.go  nonce.go
src/rune/libenclave/attestation/internal/registration/: attester.go  challenger.go
src/rune/libenclave/attestation/internal/sgx/attester/: attester-ecdsa.go  attester-epid.go
src/rune/libenclave/attestation/internal/sgx/challenger/: challenger-ecdsa.go  challenger-epid.go
src/rune/libenclave/attestation/internal/sgx/dcap/: qvl.go
src/rune/libenclave/attestation/internal/sgx/ias/: api.go  ca_cert.go  ias.go
src/rune/libenclave/configs/: config.go  log_level.go
src/rune/libenclave/epm/: epm.go  mmap.go  parsemaps.go
src/rune/libenclave/intelsgx/: aesmd.go  arch.go  attestation.go  cpuid.go  epc.go  launch_control.go  secs.go
src/rune/libenclave/intelsgx/preload/: device_linux.go
src/rune/libenclave/intelsgx/proto/: aesm-service.pb.go  aesm-service.proto
src/rune/libenclave/internal/runtime/: enclave_runtime.go
src/rune/libenclave/internal/runtime/core/: core.go
src/rune/libenclave/internal/runtime/pal/: api_v1_linux.go  api_v2_linux.go  api_v3_linux.go  loader.go  pal.go  pal_linux.go  spec.md
src/rune/libenclave/internal/runtime/pal/nitro_enclaves/: README.md
src/rune/libenclave/internal/runtime/pal/skeleton/: README.md  intergrate_skeleton_with_enclave_tls.md  running_skeleton_with_rune_attest_command.md
src/rune/libenclave/jailhouse/: device_linux.go
src/rune/libenclave/nitroenclaves/: device_linux.go
src/runtime-boot/: init.yaml
src/runtime-boot/init/: Cargo.toml
src/runtime-boot/init/src/: main.rs
src/shim/: .golangci.yml  Makefile  README.md  VERSION  go.mod  go.sum
src/shim/cmd/containerd-shim-rune-v2/: main.go
src/shim/conf/: config.toml
src/shim/config/: config.go  config.toml  config_test.go
src/shim/runtime/v2/rune/agent/client/: client.go
src/shim/runtime/v2/rune/agent/grpc/: image.pb.go  image.proto
src/shim/runtime/v2/rune/config/: config.go  config_test.go
src/shim/runtime/v2/rune/constants/: constants.go
src/shim/runtime/v2/rune/image/: image.go
src/shim/runtime/v2/rune/mock/: mock.go
src/shim/runtime/v2/rune/oci/: utils.go  utils_test.go
src/shim/runtime/v2/rune/types/: types.go
src/shim/runtime/v2/rune/v2/: agent.go  agent_test.go  create.go  create_test.go  image.go  service.go  utils.go  utils_test.go
src/shim/runtime/v2/rune/v2/testdata/: busybox.json
test/e2e/: decrypt_config-HW-cc-kbc.conf  decrypt_config-HW-eaa-kbc.conf  decrypt_config-HW.conf  decrypt_config-SIM-sample-kbc.conf  decrypt_config.conf  hello-world-encrypted-HW-cc-kbc.json  hello-world-encrypted-HW.json  hello-world-encrypted-SIM-sample-kbc.json  hello-world-encrypted-SIM.json  hello-world-encrypted.json  hello-world-unencrypted-SIM.json  ocicrypt.conf  sandbox.json
test_files/: agent.conf  build_occlum_instance.sh  config.json  enclave-agent.yaml  gen_bundle.sh  gen_docker_image.sh  ocicrypt.conf  sgx_default_qcnl.conf
tools/debug/: Cargo.toml  Makefile  async-client.rs  build.rs  utils.rs
tools/debug/protocols/asynchronous/: mod.rs
tools/debug/protocols/protos/: image.proto
tools/packaging/deploy/: ccruntime.yaml  enclave-cc-deploy.sh
