[package]
name = "enclave-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
clap = { version = "4.5.13", features = ["derive"] }

# logger module
env_logger = "0.11.5"

image-rs = { git = "https://github.com/confidential-containers/guest-components.git", default-features = false, rev = "v0.10.0" }
kata-sys-util = { git = "https://github.com/kata-containers/kata-containers", tag = "3.9.0" }
log = "0.4.22"
protocols = { path = "../libs/protocols" }
serde = "1.0.210"
serde_json = "1.0.128"

# Async runtime
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }

ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }

[features]
default = ["cc-kbc-rustls-tls"]

# confidential resource injection using sample-kbc
simple = ["image-rs/snapshot-unionfs", "image-rs/signature-cosign-rustls", "image-rs/signature-simple", "image-rs/keywrap-native", "image-rs/encryption-ring", "image-rs/oci-client-rustls"]

# confidential resource injection using cc-kbc (Recommended)
cc-kbc-rustls-tls = [ "image-rs/enclave-cc-cckbc-rustls-tls" ]
cc-kbc-native-tls = [ "image-rs/enclave-cc-cckbc-native-tls" ]

[build-dependencies]
ttrpc-codegen = "0.3.0"

[dev-dependencies]
rstest = "0.22.0"
