[package]
name = "protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-serde = [ "serde", "serde_json" ]

[dependencies]
ttrpc = { git = "https://github.com/haosanzi/ttrpc-rust", features = ["async"] }
async-trait = "0.1.42"
protobuf = { version = "=2.14.0", features = ["with-serde"] }
serde = { version = "1.0.130", features = ["derive"], optional = true }
serde_json = { version = "1.0.68", optional = true }

[build-dependencies]
ttrpc-codegen = "0.2.0"
