[package]
name = "init"
version = "0.0.1"
authors = ["LI Qing geding.lq@antgroup.com"]
edition = "2018"

[dependencies]
libc = "0.2.152"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
nix = { version = "0.27.1", features = ["mount"] }
anyhow = { version = "1.0", default-features = false }
