[package]
name = "init"
version = "0.0.1"
authors = ["LI Qing geding.lq@antgroup.com"]
edition = "2018"

[dependencies]
libc = "0.2.155"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.125"
nix = { version = "0.29.0", features = ["mount"] }
anyhow = { version = "1.0", default-features = false }
